--- a/index.html
+++ b/index.html
@@ -10,3 +10,22 @@
 <a href="V6.txt" download onclick="addCount()">
   Download Script V6
 </a>
+
+
+  <form action="https://formspree.io/f/meeejjrp" method="POST">
+  <label>
+    Unsa ang error sa website?
+    <textarea name="error" required></textarea>
+  </label>
+
+  <br><br>
+
+  <label>
+    Suggestion / Fix:
+    <textarea name="suggestion"></textarea>
+  </label>
+
+  <br><br>
+
+  <button type="submit">Submit</button>
+</form>
