--- a/index.html
+++ b/index.html
@@ -12,20 +12,7 @@
 </a>
 
 
-  <form action="https://formspree.io/f/meeejjrp" method="POST">
-  <label>
-    Unsa ang error sa website?
-    <textarea name="error" required></textarea>
-  </label>
-
-  <br><br>
-
-  <label>
-    Suggestion / Fix:
-    <textarea name="suggestion"></textarea>
-  </label>
-
-  <br><br>
-
-  <button type="submit">Submit</button>
-</form>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdh1yXj06wKGnoPtc6ljWax2treVtvlHQdrNm0pPI0ph1Sxhg/viewform"
+   target="_blank">
+  <button>Report Error</button>
+  </a>
