--- a/index.html
+++ b/index.html
@@ -1,39 +1,124 @@
-<h2>V6 Download</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>V6 Script Error Report</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<a href="V6.txt" download>
-  <button>Download V6</button>
-</a>
+  <style>
+    body {
+      background: #0f172a;
+      color: #e5e7eb;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .box {
+      max-width: 500px;
+      margin: auto;
+      background: #020617;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,.6);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-size: 14px;
+    }
+    textarea {
+      width: 100%;
+      height: 80px;
+      margin-top: 5px;
+      padding: 10px;
+      border-radius: 6px;
+      border: none;
+      resize: none;
+      font-size: 14px;
+    }
+    button {
+      width: 100%;
+      margin-top: 20px;
+      padding: 12px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      background: #2563eb;
+      color: white;
+      cursor: pointer;
+    }
+    button:disabled {
+      background: #475569;
+    }
+    .status {
+      margin-top: 15px;
+      text-align: center;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
 
-<hr>
+  <div class="box">
+    <h2>V6 Script – Report Error</h2>
 
-<h3>Feedback</h3>
+    <label>Error:</label>
+    <textarea id="error" placeholder="Say the error..."></textarea>
 
-<input type="text" id="feedbackInput" placeholder="Type your feedback here" style="width:100%;padding:8px;">
-<br><br>
-<button onclick="submitFeedback()">Submit</button>
+    <label>Want to Fix:</label>
+    <textarea id="fix" placeholder="Say what you want to fix..."></textarea>
 
-<hr>
+    <button id="submitBtn" onclick="submitReport()">SUBMIT</button>
 
-<h3>LOG</h3>
-<div id="log" style="border:1px solid #ccc; padding:10px; min-height:100px;">
-  <p><i>No feedback yet</i></p>
-</div>
+    <div class="status" id="status"></div>
+  </div>
 
-<script>
-function submitFeedback() {
-  const input = document.getElementById("feedbackInput");
-  const log = document.getElementById("log");
+  <script>
+    const WEB_APP_URL =
+      "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgx6W359HUAzyaXjTs6xuCQ6JASgErMk77kCFY0G3kU--axmJ01tMfTxZIXMfNcnrHFrC0qIpZwtNThWaCnPdNIuCEGzizYG3UlDamzIASHqZiulREoJ2BGR8sB3EH3bDONt1CF7TjeXSbe0s_M5LhBoWSl7ySVbFCUFDbRIu7RwfZc2k3vEuYB0vVTpjLkmm-rqKUqQwWoS4Tlu5xtLQPHpFhV3yB36CGXKVwAnsgLXzydAW50Fe1R7qHlwA0QfrEiANVZOU5KGGEyYoAm17ErM3d-uTQSHoC-_THY&lib=Mtaw9ypuB5lE0_nVjL9NCKzwnZNjczuUW";
 
-  if (input.value.trim() === "") return;
+    function submitReport() {
+      const error = document.getElementById("error").value.trim();
+      const fix = document.getElementById("fix").value.trim();
+      const status = document.getElementById("status");
+      const btn = document.getElementById("submitBtn");
 
-  if (log.innerHTML.includes("No feedback yet")) {
-    log.innerHTML = "";
-  }
+      if (!error || !fix) {
+        status.textContent = "❌ Please fill up both fields";
+        return;
+      }
 
-  const p = document.createElement("p");
-  p.textContent = "• " + input.value;
+      btn.disabled = true;
+      status.textContent = "⏳ Submitting...";
 
-  log.appendChild(p);
-  input.value = "";
+      fetch(WEB_APP_URL, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          error: error,
+          want_fix: fix
+        })
+      })
+      .then(res => res.text())
+      .then(() => {
+        status.textContent = "✅ Submitted successfully";
+        document.getElementById("error").value = "";
+        document.getElementById("fix").value = "";
+        btn.disabled = false;
+      })
+      .catch(() => {
+        status.textContent = "❌ Failed to submit";
+        btn.disabled = false;
+      });
+    }
+  </script>
+
+</body>
+</html>  input.value = "";
 }
 </script>
