--- a/index.html
+++ b/index.html
@@ -1,124 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>V6 Script Error Report</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      background: #0f172a;
-      color: #e5e7eb;
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .box {
-      max-width: 500px;
-      margin: auto;
-      background: #020617;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,.6);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-size: 14px;
-    }
-    textarea {
-      width: 100%;
-      height: 80px;
-      margin-top: 5px;
-      padding: 10px;
-      border-radius: 6px;
-      border: none;
-      resize: none;
-      font-size: 14px;
-    }
-    button {
-      width: 100%;
-      margin-top: 20px;
-      padding: 12px;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      background: #2563eb;
-      color: white;
-      cursor: pointer;
-    }
-    button:disabled {
-      background: #475569;
-    }
-    .status {
-      margin-top: 15px;
-      text-align: center;
-      font-size: 14px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>V6 Script – Report Error</title>
+<style>
+body {
+  background: #0f172a;
+  font-family: Arial, sans-serif;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.box {
+  background: #020617;
+  padding: 20px;
+  border-radius: 12px;
+  width: 320px;
+}
+textarea {
+  width: 100%;
+  height: 80px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  padding: 8px;
+}
+button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  background: #2563eb;
+  color: white;
+  font-size: 16px;
+}
+#msg {
+  margin-top: 10px;
+  text-align: center;
+}
+</style>
 </head>
 <body>
 
-  <div class="box">
-    <h2>V6 Script – Report Error</h2>
+<div class="box">
+  <h2>V6 Script – Report Error</h2>
 
-    <label>Error:</label>
-    <textarea id="error" placeholder="Say the error..."></textarea>
+  <textarea id="error" placeholder="Error:"></textarea>
+  <textarea id="fix" placeholder="Want to fix:"></textarea>
 
-    <label>Want to Fix:</label>
-    <textarea id="fix" placeholder="Say what you want to fix..."></textarea>
+  <button onclick="submitData()">SUBMIT</button>
+  <div id="msg"></div>
+</div>
 
-    <button id="submitBtn" onclick="submitReport()">SUBMIT</button>
+<script>
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxm1Pagyq0i9flSh67ouMWEt9cDcJpoP1YBnZq6T6lZw_Q5uxCoDbVxUOL3vJy63IwddA/exec"; // 👈 paste doPost URL
 
-    <div class="status" id="status"></div>
-  </div>
+function submitData() {
+  const error = document.getElementById("error").value;
+  const fix = document.getElementById("fix").value;
+  const msg = document.getElementById("msg");
 
-  <script>
-    const WEB_APP_URL =
-      "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgx6W359HUAzyaXjTs6xuCQ6JASgErMk77kCFY0G3kU--axmJ01tMfTxZIXMfNcnrHFrC0qIpZwtNThWaCnPdNIuCEGzizYG3UlDamzIASHqZiulREoJ2BGR8sB3EH3bDONt1CF7TjeXSbe0s_M5LhBoWSl7ySVbFCUFDbRIu7RwfZc2k3vEuYB0vVTpjLkmm-rqKUqQwWoS4Tlu5xtLQPHpFhV3yB36CGXKVwAnsgLXzydAW50Fe1R7qHlwA0QfrEiANVZOU5KGGEyYoAm17ErM3d-uTQSHoC-_THY&lib=Mtaw9ypuB5lE0_nVjL9NCKzwnZNjczuUW";
-
-    function submitReport() {
-      const error = document.getElementById("error").value.trim();
-      const fix = document.getElementById("fix").value.trim();
-      const status = document.getElementById("status");
-      const btn = document.getElementById("submitBtn");
-
-      if (!error || !fix) {
-        status.textContent = "❌ Please fill up both fields";
-        return;
-      }
-
-      btn.disabled = true;
-      status.textContent = "⏳ Submitting...";
-
-      fetch(WEB_APP_URL, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          error: error,
-          want_fix: fix
-        })
-      })
-      .then(res => res.text())
-      .then(() => {
-        status.textContent = "✅ Submitted successfully";
-        document.getElementById("error").value = "";
-        document.getElementById("fix").value = "";
-        btn.disabled = false;
-      })
-      .catch(() => {
-        status.textContent = "❌ Failed to submit";
-        btn.disabled = false;
-      });
+  fetch(WEB_APP_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      error: error,
+      want_fix: fix
+    })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.status === "success") {
+      msg.style.color = "lime";
+      msg.innerText = "✅ Submitted successfully";
+      document.getElementById("error").value = "";
+      document.getElementById("fix").value = "";
+    } else {
+      throw new Error(data.message);
     }
-  </script>
-
-</body>
-</html>  input.value = "";
+  })
+  .catch(err => {
+    msg.style.color = "red";
+    msg.innerText = "❌ Failed to submit";
+    console.error(err);
+  });
 }
 </script>
+
+</body>
+</html>
