--- a/index.html
+++ b/index.html
@@ -1,88 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>V6 Script – Report Error</title>
-<style>
-body {
-  background: #0f172a;
-  font-family: Arial, sans-serif;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-.box {
-  background: #020617;
-  padding: 20px;
-  border-radius: 12px;
-  width: 320px;
-}
-textarea {
-  width: 100%;
-  height: 80px;
-  margin-bottom: 10px;
-  border-radius: 8px;
-  padding: 8px;
-}
-button {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 8px;
-  background: #2563eb;
-  color: white;
-  font-size: 16px;
-}
-#msg {
-  margin-top: 10px;
-  text-align: center;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Send to Google Sheet</title>
 </head>
 <body>
 
-<div class="box">
-  <h2>V6 Script – Report Error</h2>
+<h2>Submit Form</h2>
 
-  <textarea id="error" placeholder="Error:"></textarea>
-  <textarea id="want_fix" placeholder="Want_fix:"></textarea>
+<input id="name" placeholder="Your name"><br><br>
+<textarea id="message" placeholder="Your message"></textarea><br><br>
 
-  <button onclick="submitData()">SUBMIT</button>
-  <div id="msg"></div>
-</div>
+<button onclick="sendData()">Submit</button>
+
+<p id="result"></p>
 
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxm1Pagyq0i9flSh67ouMWEt9cDcJpoP1YBnZq6T6lZw_Q5uxCoDbVxUOL3vJy63IwddA/exec"; // 👈 paste doPost URL
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwB7elfN9GHzSLf29wYD-al3vs8rDBiIIeU_enN-VG1hkGxUY1uyQS2Nhob9qo9gSW-AQ/exec";
 
-function submitData() {
-  const error = document.getElementById("error").value;
-  const fix = document.getElementById("want_fix").value;
-  const msg = document.getElementById("msg");
+function sendData() {
+  const data = {
+    name: document.getElementById("name").value,
+    message: document.getElementById("message").value
+  };
 
   fetch(WEB_APP_URL, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      error: error,
-      want_fix: fix
-    })
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify(data)
   })
   .then(res => res.json())
-  .then(data => {
-    if (data.status === "success") {
-      msg.style.color = "lime";
-      msg.innerText = "✅ Submitted successfully";
-      document.getElementById("error").value = "";
-      document.getElementById("want_fix").value = "";
-    } else {
-      throw new Error(data.message);
-    }
+  .then(res => {
+    document.getElementById("result").innerText =
+      res.status === "success" ? "Submitted ✅" : "Failed ❌";
   })
   .catch(err => {
-    msg.style.color = "red";
-    msg.innerText = "❌ Failed to submit";
+    document.getElementById("result").innerText = "Error ❌";
     console.error(err);
   });
 }
