--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <h2>Submit Form</h2>
 
-<input id="name" placeholder="Your name"><br><br>
-<textarea id="message" placeholder="Your message"></textarea><br><br>
+<input id="name" placeholder="name"><br><br>
+<textarea id="message" placeholder="message"></textarea><br><br>
 
 <button onclick="sendData()">Submit</button>
 
