--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h3>Feedback</h3>
 
-<textarea id="feedback" placeholder="Feedback 1"></textarea><br><br>
+<textarea id="feedback" placeholder="Feedback"></textarea><br><br>
 <textarea id="feedback2" placeholder="Feedback 2"></textarea><br><br>
 
 <button onclick="send()">Submit</button>
