--- a/index.html
+++ b/index.html
@@ -1,44 +1,138 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<title>Feedback</title>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #e4e6eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card {
+  background: #fff;
+  width: 320px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,.2);
+  text-align: center;
+}
+
+h2 {
+  color: #1877f2;
+  margin-bottom: 10px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccd0d5;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background: #1877f2;
+  border: none;
+  color: white;
+  border-radius: 6px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #166fe5;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #1877f2;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  margin: 15px auto;
+  display: none;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.hidden {
+  display: none;
+}
+</style>
+</head>
+
 <body>
 
-<div id="step1">
-  <h3>Feedback 1</h3>
-  <input id="f1" type="text" placeholder="Feedback 1">
-  <button onclick="submitF1()">Submit</button>
-</div>
+<div class="card">
 
-<div id="step2" style="display:none;">
-  <h3>Feedback 2</h3>
-  <input id="f2" type="text" placeholder="Feedback 2">
-  <button onclick="submitF2()">Submit</button>
-</div>
+  <!-- STEP 1 -->
+  <div id="step1">
+    <h2>Feedback</h2>
+    <input id="f1" placeholder="Your feedback">
+    <button onclick="send1()">Submit</button>
+  </div>
 
-<div id="done" style="display:none;">
-  <h3>Done ✅</h3>
-  <a href="V6_SCRIPT_DOWNLOAD_LINK" download>
-    ⬇ Download Script V6
-  </a>
+  <!-- STEP 2 -->
+  <div id="step2" class="hidden">
+    <h2>More Feedback</h2>
+    <input id="f2" placeholder="More feedback">
+    <button onclick="send2()">Submit</button>
+  </div>
+
+  <!-- LOADING -->
+  <div class="loader" id="loader"></div>
+
+  <!-- DONE -->
+  <div id="done" class="hidden">
+    <h2>Thank you 💙</h2>
+    <a href="V6_DOWNLOAD_LINK" style="color:#1877f2;text-decoration:none;">
+      ⬇ Download Script V6
+    </a>
+  </div>
+
 </div>
 
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbznRC4qPBMuiW0SyGdn4RC3KBBwZu_pvVD_TpBj6YGK2qaWj1Q3__B3YnOMcvFWitKUNQ/exec";
+const WEB_APP_URL = "WEB_APP_URL_HERE";
 
-function submitF1() {
+function showLoader(show) {
+  document.getElementById("loader").style.display = show ? "block" : "none";
+}
+
+function send1() {
   const v = document.getElementById("f1").value;
+  showLoader(true);
+
   fetch(WEB_APP_URL + "?feedback=" + encodeURIComponent(v))
     .then(() => {
-      document.getElementById("step1").style.display = "none";
-      document.getElementById("step2").style.display = "block";
+      showLoader(false);
+      document.getElementById("step1").classList.add("hidden");
+      document.getElementById("step2").classList.remove("hidden");
     });
 }
 
-function submitF2() {
+function send2() {
   const v = document.getElementById("f2").value;
+  showLoader(true);
+
   fetch(WEB_APP_URL + "?feedback=" + encodeURIComponent(v))
     .then(() => {
-      document.getElementById("step2").style.display = "none";
-      document.getElementById("done").style.display = "block";
+      showLoader(false);
+      document.getElementById("step2").classList.add("hidden");
+      document.getElementById("done").classList.remove("hidden");
     });
 }
 </script>
