--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ button:hover {
 </div>
 
 <script>
-const WEB_APP_URL = "WEB_APP_URL_HERE";
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbznRC4qPBMuiW0SyGdn4RC3KBBwZu_pvVD_TpBj6YGK2qaWj1Q3__B3YnOMcvFWitKUNQ/exec";
 
 function showLoader(show) {
   document.getElementById("loader").style.display = show ? "block" : "none";
