Update download button for Script 1 to V6.txt

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ button{
 <div class="box hidden" id="scriptList">
   <h3>Available Scripts</h3>
 
-  <button onclick="downloadScript('script1.zip')">Download Script 1</button><br><br>
+  <button onclick="downloadScript('V6.txt')">Download Script 1</button><br><br>
   <button onclick="downloadScript('script2.zip')">Download Script 2</button><br><br>
   <button onclick="downloadScript('script3.zip')">Download Script 3</button>
 
